--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plantguesser",
-  "homepage": "https://ravager6969.github.io/plantguesser/",
+  "homepage": "https://chubkey.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
